tests/ui/custom-attribute-multisegment.stderr
error[E0433]: cannot find macro `nonexistent` in module `existent`
  --> $DIR/custom-attribute-multisegment.rs:5:13
   |
LL | #[existent::nonexistent]
   |             ^^^^^^^^^^^ could not find `nonexistent` in `existent`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
